# speech-to-text-local

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run.sh  setup.sh
src/: app.py  audio_stream.py  gui.py  stt_vosk.py  utils.py
tests/: test_smoke.py
