[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-gui"
version = "0.1.0"
description = "GUI minimale per STT offline in tempo reale con Vosk"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
